--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,9 @@
   "dependencies": {
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
-    "js-cookie": "^3.0.5",
     "next": "15.3.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "socket.io-client": "^4.8.1"
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
